crates/arteziac/tests/snapshots/lower__lower_comparison.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(a: Int, b: Int) {\\n let c = a < b\\n}\")"
---
func main(%0, %1) -> Unit {
  local %0: Int (a)
  local %1: Int (b)
  local %2: Bool (c)
  bb0:
    v0 = load %0
    v1 = load %1
    v2 = cmp.lt v0, v1
    store %2, v2
    return
}
