crates/arteziac/tests/snapshots/lower__lower_unary_neg.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main() { let x = -5; }\")"
---
func main() -> Unit {
  local %0: Int (x)
  bb0:
    v0 = const.int -5
    store %0, v0
    v1 = const.unit
    return
}
